# crack

./: .gitignore  CI_SETUP.md  Cargo.toml  OPTIMIZATION_SUMMARY.md  RELEASE_GUIDE.md
.github/workflows/: release.yml
scripts/: release.ps1
src/: main.rs
src/cli/: mod.rs
src/config/: mod.rs
src/jetbrains/: cert_generator.rs  code.rs  constant.rs  inject.rs  mod.rs  product_license_generator.rs  xyzr.rs
src/mobaxterm/: constant.rs  encrypt.rs  mod.rs  util.rs
src/utils/: mod.rs
